--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+.grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    height: 50em;
+    width: 80em;
+    gap: 2em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.cover-image {
+    width: 100%;
+    aspect-ratio: 1.25;
+    object-fit: cover;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.book {
+    cursor: pointer;
+    padding: 2em;
+    border-radius: 0 1em 1em 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.background {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    background-color: #0000003f;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 50em;
+    max-height: 40em;
+    overflow-y: auto;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    background-color: white;
+    padding: 2em;
+    border-radius: 1em;
 }
