Colors, shadows, background

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    height: 50em;
-    width: 80em;
+    height: 45em;
+        width: 72em;
     gap: 2em;
 }
 
@@ -13,10 +13,13 @@
     object-fit: cover;
 }
 
-.book {
+.cover {
     cursor: pointer;
     padding: 2em;
     border-radius: 0 1em 1em 0;
+    box-sizing: border-box;
+        height: 100%;
+        box-shadow: 2px -2px 2px #0003 inset, -2px 2px 2px #fff3 inset, -8px -8px 8px #0005;
 }
 
 .background {
@@ -40,6 +43,7 @@
         border-radius: 1em;
         float: left;
         overflow-x: auto;
+        box-shadow: 2px -2px 2px #0003 inset, -2px 2px 2px #fff3 inset;
     }
     
     .popup-book {
@@ -49,4 +53,5 @@
     column-width: 26em;
         height: 100%;
         box-sizing: border-box;
+        box-shadow: 0 0 4px 2px #0007;
 }
