--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
         sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-image: url(/public/wood.jpg);
+    background-image: url("./wood.jpg");
     background-size: contain;
 }
 
