--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-image: url("./wood.jpg");
-    background-size: contain;
+    background-size: cover;
+    background-position: center;
 }
 
 code {
