--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
     background-image: url("./wood.jpg");
     background-size: cover;
     background-position: center;
+    overflow: hidden;
 }
 
 code {
